@@ -4,13 +4,15 @@ license = Perl_5
 copyright_holder = David L. Day
 copyright_year   = 2011
 
+
 ; -- Basics
+[PerlTidy]
+[AutoPrereqs]
+[AutoVersion]
 [GatherDir]
 exclude_match = \.bak$
 exclude_filename = build/
 [PruneCruft]
-[AutoPrereqs]
-[AutoVersion]
 
 ; -- Generate Tests
 [Test::Compile]
@@ -20,7 +22,6 @@ exclude_filename = build/
 ; -- Munge Files
 [Prepender]
 copyright = 1
-line = use strict; use warnings;
 [PkgVersion]
 [PodWeaver]
 
@@ -50,7 +51,6 @@ repository = http://github.com/davidlday/Lingua-AtD
 [MetaJSON]
 [Manifest]
 [InstallGuide]
-[PerlTidy]
 
 ; -- pre-release
 ;[CheckChangesHasContent]
