@@ -3,59 +3,35 @@ package Lingua::AtD::Error;
 use strict;
 use warnings;
 use Carp;
-use Class::Std::Utils;
+use Class::Std;
 
 {
 
     # Error objects have the following attributes
-    my %hashref_of;        # Original hash
-    my %string_of;         # String in error
-    my %description_of;    # Description of error
-    my %precontext_of;     # What immediately precedes the error
-    my %suggestions_of;    # List of suggested fixes / alternatives
-    my %type_of;           # Type of error [grammar|spell|stats|style]
-    my %url_of;            # AtD info.slp URL for error details
+    my %string_of       :ATTR( :init_arg<string> :get<string>  );
+    my %description_of  :ATTR( :init_arg<description> :get<description>  );
+    my %precontext_of   :ATTR( :init_arg<precontext> :get<precontext> );
+    my %suggestions_of  :ATTR();
+    my %type_of         :ATTR( :init_arg<type> :get<type> );
+    my %url_of          :ATTR( :get<url> :default() );
 
-    sub new {
-        my ( $class, $error_hash_ref ) = @_;
+    sub BUILD {
+        my ($self, $ident, $arg_ref) = @_;
 
-        # Bless a scalar to instantiate the new object...
-        my $new_object = bless( anon_scalar(), $class );
-        my $ident = ident($new_object);
+        # Special cases. Both are optional, suggestions is an array.
+        $suggestions_of{$ident} = $arg_ref->{suggestions} if defined($arg_ref->{suggestions});
+        $url_of{$ident}         = $arg_ref->{url} if defined($arg_ref->{url});
 
-       # TODO - Check $error_hash_ref and throw exception if empty or undefined.
-
-        $hashref_of{$ident}     = $error_hash_ref;
-        $string_of{$ident}      = $error_hash_ref->{string};
-        $description_of{$ident} = $error_hash_ref->{description};
-        $precontext_of{$ident}  = $error_hash_ref->{precontext};
-        $suggestions_of{$ident} = $error_hash_ref->{suggestions}->{option};
-        $type_of{$ident}        = $error_hash_ref->{type};
-        $url_of{$ident}         = $error_hash_ref->{url};
-
-        return $new_object;
+        return;
     }
 
-    sub get_string {
-        my $self = shift;
-        return $string_of{ ident($self) };
-    }
-
-    sub get_description {
-        my $self = shift;
-        return $description_of{ ident($self) };
-    }
-
-    sub get_precontext {
-        my $self = shift;
-        return $precontext_of{ ident($self) };
-    }
-
+    # Convenience method
     sub has_suggestions {
         my $self = shift;
         return defined( $suggestions_of{ ident($self) } );
     }
 
+    # Dereference array
     sub get_suggestions {
         my $self = shift;
         return $self->has_suggestions()
@@ -63,43 +39,10 @@ use Class::Std::Utils;
           : undef;
     }
 
-    sub get_type {
-        my $self = shift;
-        return $type_of{ ident($self) };
-    }
-
+    # Convenience method
     sub has_url {
         my $self = shift;
         return defined( $url_of{ ident($self) } );
-    }
-
-    sub get_url {
-        my ( $self, $theme ) = @_;
-        my $info_url = $url_of{ ident($self) };
-        if ( $self->has_url() && defined($theme) ) {
-            $info_url .= '&theme=' . $theme;
-        }
-        return $info_url;
-    }
-
-    sub get_hashref {
-        my $self = shift;
-        return $hashref_of{ ident($self) };
-    }
-
-    sub DESTROY {
-        my $self = shift;
-        my $ident = ident($self);
-        
-        delete $hashref_of{$ident};
-        delete $string_of{$ident};
-        delete $description_of{$ident};
-        delete $precontext_of{$ident};
-        delete $suggestions_of{$ident};
-        delete $type_of{$ident};
-        delete $url_of{$ident};
-        
-        return;
     }
 
 }
